# cgo-repro

./: .bazelrc  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  build_docker.sh  go.mod  main.go
